added CSS to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
 
@@ -27,7 +28,13 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element. When you increase padding, you are making the element bigger.</li>
+          <li>There are 3 ways to style a webpage using CSS: Inline CSS, Internal CSS Style Sheet, and the most common way is External CSS style sheet.</li>
+          <li>A selector defines the element or attributes to which the rules, or declarations, will apply.</li>
+          <li>A declaration contains 2 important components, the CSS property we want to apply and the value of the property.</li>
+          <li>If we want to apply a rule to all elements on the page, we insert a "*" symbol.</li>
+          <li>CSS determines the styles of a webpage in order to make a website visually appealing. CSS can also make a website simpler to use with a polished design and consistent organization.</li>
         </ul>
       </section>
 
@@ -36,6 +43,9 @@
         <ul>
           <li>git status: checks what branch we are currently in</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git checkout main: lets us swith to the main branch</li>
+          <li>git add -A: lets us stage the changes so we can add the changed files in our working directory of Git</li>
+          <li>touch lets us create a file in a directory</li>
           <li>cd: command to change directories</li>
           <li>pwd: shows us what directory we are currently in</li>
           <li>ls: lists all files inside the directory we are currently in</li>
@@ -43,12 +53,12 @@
         </ul>
       </section>
 
-        <section class="card" id="javascript-section">
-          <h2>JavaScript</h2>
-          <ul>
-            <li>Enter your JavaScript notes here</li>
-          </ul>
-      </section>
+       <section class="card" id="javascript-section">
+         <h2>JavaScript</h2>
+         <ul>
+           <li>Enter your JavaScript notes here</li>
+         </ul>
+     </section>
     </main>
 
     <footer>
